--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div id="img"></div>
             <!--The id attribute is used to label sections or parts of your HTML
              document.-->
+            <img src="https://cdn.forcast.com.au/media/webp_image/wysiwyg/JUL5_MAIN_MOBILE.webp3">
         </div>
         
     </body>
