--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
             <div id="img"></div>
             <!--The id attribute is used to label sections or parts of your HTML
              document.-->
+             <img src=>
+        </div>
+        <div class="slider">
+            <div id="img">
+                <img src='https://cdn.forcast.com.au/media/webp_image/wysiwyg/JUL5_MAIN_MOBILE.webp3'>
+            </div>
+        </div>
+        <div class="slider">
+            <div id="img">
+                <img src='https://i.pinimg.com/originals/b6/a8/42/b6a8429f8097c52d13081dece51b544a.jpg'>
+            </div>
+        </div>
+        <div class="slider">
+            <div id="img">
+                <img src='https://i5.walmartimages.com/asr/49449dc5-f0d7-4bb2-9664-77072f33fcc9.0d62633a014df1006e4d5b6830005204.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF'>
+            </div>
+        </div>
+        <div class="slider">
+            <div id="img">
+                <img src='https://cdn.forcast.com.au/media/webp_image/wysiwyg/JUL5_MAIN_MOBILE.webp'>
+            </div>
+        </div>
+         <div class="slider">
+            <div id="img">
+                <img src=>
+            </div>
         </div>
         
     </body>
